--- a/css/styles.css
+++ b/css/styles.css
@@ -36,10 +36,10 @@ a {
 }
 
 img {
-    width: 100%;
+    max-width: 100%;
 }
 
-.contendor {
+.container {
     max-width: 120rem;
     margin: 0 auto;
 }
@@ -53,3 +53,52 @@ h1, h2, h3 {
 h1 { font-size: 4rem; }
 h2 { font-size: 3.2rem; }
 h3 { font-size: 2.4rem; }
+
+/* Header */
+.header {
+    display: flex;
+    justify-content: center;
+}
+
+.header__logo {
+    margin: 3rem 0;
+}
+
+/* Footer */
+.footer {
+    background-color: var(--darkPrimary);
+    padding: 1rem 0;
+    margin-top: 2rem;
+}
+
+.footer__text {
+    font-family: var(--primaryFont);
+    text-align: center;
+    font-size: 2.2rem;
+}
+
+/* Navigation */
+.navigation {
+    background-color: var(--darkPrimary);
+    padding: 1rem 0;
+    display: flex;
+    justify-content: center;
+    gap: 2rem;
+}
+
+.navigation__link {
+    font-family: var(--primaryFont);
+    color: var(--white);
+    font-size: 3rem;
+    /* margin-right: 2rem;  Forma antigua */
+}
+/*
+.navigation__link:last-of-type{
+    margin-right: 0;
+}
+*/ 
+
+.navigation__link--active,
+.navigation__link:hover {
+    color: var(--secondary);
+}
