--- a/css/styles.css
+++ b/css/styles.css
@@ -102,3 +102,89 @@ h3 { font-size: 2.4rem; }
 .navigation__link:hover {
     color: var(--secondary);
 }
+
+/* Grid */
+.grid   {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 2rem;
+}
+@media (min-width:769px ){
+    .grid {
+        grid-template-columns: repeat(3, 1fr);
+    }
+}
+
+/* Products */
+.product {
+    background-color: var(--darkPrimary);
+    padding: 1rem;
+}
+
+.product__image {
+    width: 100%;
+}
+
+.product__name {
+    font-size: 4rem;
+}
+
+.product__price {
+    font-size: 2.8rem;
+    color: var(--secondary);
+}
+
+.product__name,
+.product__price {
+    font-family: var(--primaryFont);
+    margin: 1rem 0;
+    text-align: center;
+    line-height: 1.2;
+}
+
+/* Graphics */
+.graphic {
+    min-height: 30rem;
+    background-repeat: no-repeat;
+    background-size: cover;
+    grid-column: 1 / 3;
+}
+
+.graphic--shirts {
+    grid-row: 2 / 3;
+    background-image: url(../img/grafico1.jpg);
+}
+
+.graphic--node{
+    background-image: url(../img/grafico2.jpg);
+    grid-row: 8 / 9;
+}
+
+@media (min-width: 768px){
+    .graphic--node {
+        grid-row: 5 / 6;
+        grid-column: 2 / 4;
+    }
+}
+
+/* About Us */
+.aboutUs {
+    display: grid;
+    grid-template-rows: repeat(2, auto);
+}
+@media (min-width: 768px){
+    .aboutUs {
+        grid-template-columns: repeat(2, 1fr);
+        column-gap: 2rem;
+    }
+}
+
+.aboutUs__image {
+    grid-row: 1 / 2;
+    width: 100%;
+}
+@media (min-width: 768px){
+    .aboutUs__image {
+        grid-column: 2 / 3;
+    }
+}
