--- a/css/styles.css
+++ b/css/styles.css
@@ -188,3 +188,27 @@ h3 { font-size: 2.4rem; }
         grid-column: 2 / 3;
     }
 }
+
+/* Blocks */
+.blocks {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 2rem;
+}
+@media (min-width: 768px){
+    .blocks {
+        grid-template-columns: repeat(4, 1fr);
+    }
+}
+
+.block {
+    text-align: center;
+}
+
+.block__img {
+    width: 100%;
+}
+
+.block__title {
+    margin: 0;  
+}
