--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,7 @@
     --primary: #9C27B0;
     --darkPrimary: #89119D;
     --secondary: #FFCE00;
-    --darkSecondary: rgb(233, 287, 2);
+    --darkSecondary: #E1B600;
     --white: #FFFFFF;
     --black: #000000;
 
@@ -36,7 +36,7 @@ a {
 }
 
 img {
-    max-width: 100%;
+    width: 100%;
 }
 
 .container {
@@ -121,10 +121,6 @@ h3 { font-size: 2.4rem; }
     padding: 1rem;
 }
 
-.product__image {
-    width: 100%;
-}
-
 .product__name {
     font-size: 4rem;
 }
@@ -181,7 +177,6 @@ h3 { font-size: 2.4rem; }
 
 .aboutUs__image {
     grid-row: 1 / 2;
-    width: 100%;
 }
 @media (min-width: 768px){
     .aboutUs__image {
@@ -205,10 +200,57 @@ h3 { font-size: 2.4rem; }
     text-align: center;
 }
 
-.block__img {
-    width: 100%;
-}
-
 .block__title {
     margin: 0;  
+}
+
+/* Product Page */
+@media (min-width: 768px){
+    .shirt {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        column-gap: 2rem;
+
+    }
+}
+
+.productForm {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 2rem;
+}
+
+.form__field {
+    border: 1rem solid var(--darkPrimary);
+    background-color: transparent;
+    color: var(--white);
+    font-size: 2rem;
+    font-family: Arial, Helvetica, sans-serif;
+    padding: 1rem;
+    appearance: none;
+}
+
+.form__field::placeholder{
+    color: var(--white);
+}
+
+.form__submit {
+    background-color: var(--secondary);
+    border: none;
+    font-size: 2rem;
+    font-family: var(--primaryFont);
+    padding: 2rem;
+    transition: background-color .3s ease;
+    grid-column: 1 / 3;
+    font-weight: 700;
+}
+
+.form__submit:hover {
+    background-color: var(--darkSecondary);
+    cursor: pointer;
+}
+
+.form__option {
+    background-color: var(--secondary);
+    color: var(--black);
 }
